--- a/_sass/_to-top.scss
+++ b/_sass/_to-top.scss
@@ -2,7 +2,7 @@
   display: none;
   opacity: 0;
   z-index: 1;
-  transition-property: opacity;
+  transition-property: background-color, opacity;
   transition-duration: 0.5s;
 }
 
@@ -14,11 +14,13 @@
   position: absolute;
   top: 0;
   left: 0;
-  background: rgba(0,0,0, 0.4);
+  background-color: rgba(0,0,0, 0.4);
+  -webkit-backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px);
 }
 
 .is-top .to-top:hover, .is-top .to-top:active {
-  opacity: 0.7;
+  background-color: rgba(0,0,0, 0.2);
 }
 
 .js a.to-top {
